tdf#96948 Change color of the area behind Impress slide immediately

after saving Options > Application colours > Application background.

This fixes a regression from 1c481fe6522f4c7d883e77a4ac32f855b9bcb323.

Change-Id: I8dc0caf9e351c0b1bf2a10e9097d8f3e895f1471